@@ -106,6 +106,9 @@ wchar_t *splt_u_win32_utf8_to_utf16(const char *source);
 
 char *splt_u_safe_strdup(char *input, int *error);
 
+void splt_u_print_overlap_time(splt_state *state);
+long splt_u_overlap_time(splt_state *state, int splitpoint_index);
+
 #define MP3SPLT_UTILS_H
 
 #endif
